# dots_client

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  OPENWRT.md  README.md  compile_commands.json  entry_point.sh  heartbeat_listener.sh  json_to_cbor.py  mitigation_request_1.json
certs/: server-combined.pem
images/: Dockerfile
src/: client_config.h  client_context.h  dots_code.h  dots_dtls.c  dots_dtls.h  heartbeat.c  heartbeat.h  link_list.h  log.c  log.h  main.c  messages.c  messages.h  mitigation.c  mitigation.h  preconditions.h  requester.c  requester.h  signal_channel.c  signal_channel.h  signal_channel_handlers.c  signal_channel_handlers.h  task_env.c  task_env.h  utils.c  utils.h
